addPersona, add nofity system

--- a/web.config
+++ b/web.config
@@ -78,6 +78,10 @@
     <httpModules>
       <add name="ScriptModule" type="System.Web.Handlers.ScriptModule, System.Web.Extensions, Version=3.5.0.0, Culture=neutral, PublicKeyToken=31BF3856AD364E35" />
     </httpModules>
+    <sessionState
+      cookieless="true"
+      regenerateExpiredSessionId="true"
+      timeout="30" />
   </system.web>
   <system.codedom>
     <compilers>
@@ -125,6 +129,6 @@
     </assemblyBinding>
   </runtime>
   <connectionStrings>
-    <add name="SCPMdbEntities" connectionString="metadata=res://*;provider=System.Data.SqlClient;provider connection string=&quot;data source=(LocalDB)\v11.0;attachdbfilename=|DataDirectory|\SCPMdb.mdf;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+    <add name="SCPMdbEntities" connectionString="metadata=res://*;provider=System.Data.SqlClient;provider connection string=&quot;data source=(LocalDB)\v11.0;attachdbfilename=|DataDirectory|\SCPM.mdf;integrated security=True;multipleactiveresultsets=True;application name=EntityFramework&quot;" providerName="System.Data.EntityClient" />
   </connectionStrings>
 </configuration>
